# hwpxlib

./: .gitignore  CLAUDE.md  README.md  blank_file_maker.py  compatible_writer.py  namespace_preserver.py  output_multipara_test.hwpx  output_test.hwpx  output_test_fixed.hwpx  pyproject.toml  reader.py  sample.hwpx  text_extractor.py  text_modifier.py  writer.py
hwpxlib/: __init__.py  archive.py  hwpxfile.py
tests/: README.md  analyze_components.py  test_apply_segments.py  test_export_segments.py  test_modify_selected_text.py  test_multiple_files.py  test_phrase_id_json.py  test_reader_writer.py  test_roundtrip.py  test_save_only.py  text_modifier_examples.py
