[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hwpxlib"
version = "0.1.0"
description = "Minimal Python interface for reading and writing hwpx files"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Unknown"}]
license = {file = "license.txt"}

[tool.setuptools.packages.find]
include = ["hwpxlib*"]
